--- a/index.html
+++ b/index.html
@@ -83,81 +83,47 @@
     </ul>
   </nav>
 </header>
+
 <section>
   <div class="hero">
     <img src="./img/pose3.jpg" alt="Pose à 3">
     <h1 class="headline">First project</h1>
   </div>
 </section>
+
 <div class="slider"></div>
 
 <div class="summary"></div>
 
+<div class="content">
+  <p>Mon parcours est atypique ! Après avoir obtenu un bac ES, je voulais m'orienter vers l'informatique et les nouvelles technologies car en me renseignant j'ai constaté que ce secteur était en plein essor.</p>
+  <p>Ce domaine était en manque de femmes donc c'était l'occasion de m'insérer dans le secteur du web. </p>
+  <p>J'ai l'ambition de créer un site internet pour n'importe quelle personne cherchant des informations sur la mode, des astuces beautés, des restaurants et autres bons plans.</p>
+  <p></p>
+  <p></p>
+</div>
 
-<main>
-  <!-- Galerie -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/img_test.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/child.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/img_test.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/child.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/img_test.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/child.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="effect-cv">
+  <div class="img-intro">
+    <h2>Second project</h2>
+    <p>Site culinaire spécialisé dans les recettes de pâtes dans l'objectif que
+      les étudiants de l'IUT de Montreuil puisse varier leur repas...</p>
   </div>
+  <div class="distortion">
 
+  </div>
+</div>
+
+<div class="effect-cv">
+  <div class="distortion">
+
+  </div>
+  <div class="img-intro">
+    <h2>Second project</h2>
+    <p>Site culinaire spécialisé dans les recettes de pâtes dans l'objectif que
+      les étudiants de l'IUT de Montreuil puisse varier leur repas...</p>
+  </div>
+</div>
   <!-- Mini Caroussel https://mdbootstrap.com/docs/jquery/javascript/carousel/ -->
 
 
@@ -187,7 +153,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"
         integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk="
         crossorigin="anonymous"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js"
+        integrity="sha256-Wua0LsQkGDEeIkbmBNjj9wcThJh5uCD6R8+5YQhXveQ="
+        crossorigin="anonymous"></script>
 
 <script src="js/vendor/modernizr-3.7.1.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -195,6 +163,9 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
+<script src="js/hover.js"></script>
+<script src="js/app_bis.js"></script>
+
 </body>
 
 </html>
