--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="fr">
 
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Bineta DIALLO</title>
 
+  <!-- Referencement -->
+  <meta name="description" content="Portofolio de Bineta DIALLO qui résume son parcours professionnel et personnel à travers ses compétences, ses expériences professionnelles et ses réalisations.">
+  <meta name="keywords" content="portfolio, Bineta, skills, CV, réalisation">
+  <meta name="author" content="Bineta Diallo">
+  <meta name="robots" content="index">
+  <meta name="Identifier-URL" content="www.binetadialloportolio.com">
+  <!-- END Referencement -->
+
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Bineta Diallo">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="www.binetadialloportolio.com">
+  <meta property="og:image" content="images/">
+  <meta property="og:site_name" content="Bineta Diallo">
+  <meta property="og:description" content="Portofolio de Bineta DIALLO qui résume son parcours professionnel et personnel à travers ses compétences, ses expériences professionnelles et ses réalisations.">
+  <!-- END Open Graph -->
+
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="www.binetadialloportolio.com"/>
+  <meta name="twitter:title" content="Bineta Diallo"/>
+  <meta name="twitter:description" content="Portofolio de Bineta DIALLO qui résume son parcours professionnel et personnel à travers ses compétences, ses expériences professionnelles et ses réalisations."/>
+  <meta name="twitter:image" content="images/">
+  <!-- END Twitter Cards -->
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -16,16 +43,13 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
-
-  <title>Bineta DIALLO</title>
 </head>
 
+
 <body>
-
-
-<header>
+<header id="header">
   <nav class="navbar" id="nav">
-    <a id="logo" class="navbar-brand" href=""><img src="img/logo2_ajust.png" style="width: 75px; height: 75px; border-radius: 5px;"></a>
+    <a id="logo" class="navbar-brand" href=""><img src="img/logo2_ajust.png"></a>
     <ul>
       <li><a href="#link1">Compétences</a></li>
       <li><a href="#link2">Expériences</a></li>
@@ -37,15 +61,19 @@
 <section>
   <div class="hero">
     <img src="./img/pose3.jpg" alt="Pose à 3">
-    <h1 class="headline">First project</h1>
+    <h1 class="headline">Portfolio Bineta.</h1>
   </div>
 </section>
 
-<div class="content">
-  <p>Mon parcours est <span style="font-weight: bold;">atypique</span> ! Après avoir obtenu un bac ES, je voulais m'orienter vers l'informatique et les <span style="font-weight: bold;">nouvelles technologies</span> car en me renseignant j'ai constaté que ce secteur était en <span>plein essor.</span></p>
-  <p>Maintenant, je fais un <span style="font-weight: bold;">Mastère en Digital marketing & Data Analytics</span> qui est un double diplôme à l'EMLV au <span style="font-weight: bold;">Pôle Léonard de Vinci.</span></p>
-  <p>Ce domaine était en manque de femmes donc c'était l'occasion de m'insérer dans le <span style="font-weight: bold;">secteur du web.</span></p>
-  <p>J'ai <span style="font-weight: bold;">l'ambition</span> de créer un site internet pour n'importe quelle personne cherchant des informations sur la mode, des astuces beautés, des restaurants et autres bons plans.</p>
+<div class="content1">
+  <p>Mon parcours est <span>atypique</span> ! Après avoir obtenu un bac ES, je voulais m'orienter vers l'informatique et
+    les <span>nouvelles technologies</span> car en me renseignant j'ai constaté que ce secteur était en <span>plein essor.</span>
+  </p>
+  <p>Maintenant, je fais un <span>Mastère en Digital marketing & Data Analytics</span> qui est un double diplôme à
+    l'EMLV au <span>Pôle Léonard de Vinci.</span></p>
+  <p>Ce domaine était en manque de femmes donc c'était l'occasion de m'insérer dans le <span>secteur du web.</span></p>
+  <p>J'ai <span>l'ambition</span> de créer un site internet pour n'importe quelle personne cherchant des informations
+    sur la mode, des astuces beautés, des restaurants et autres bons plans.</p>
   <p></p>
   <p></p>
 </div>
@@ -57,12 +85,12 @@
       les étudiants de l'IUT de Montreuil puisse varier leur repas...</p>
   </div>
   <div class="distortion">
-    <img src="" alt="">
+    <img src="img/pastaploutos.png" alt="Photo page d'accueil du site Pastaploutos">
   </div>
 </div>
 
 
-  <!-- Compétences : Pourcentage -->
+<!-- SKILLS : Progress bar -->
 <div class="content">
   <div class="competences" id="link1">
     <h2>SKILLS</h2>
@@ -95,12 +123,37 @@
     </div>
   </div>
 
-  <div class="Expériences professionnelles" id="link2">
-    <p></p>
+  <div class="section_exp" id="link2">
+    <h2>Expériences professionnelles</h2>
+    <div class="exp">
+      <div class="exp-logo">
+        <a href="#"><img src="img/rectorat.jpg" alt="Logo du rectorat d'Orléans"></a>
+      </div>
+      <div class="exp-info">
+        <h3>Développeur d'applications et de services web</h3>
+        <h4>Octobre 2018 - Août 2019</h4>
+      </div>
+      <div class="exp-desc">
+        <p>Elaboration d'une application en ligne de commande pour extraire des données concernant
+          le réseau social académique Confluence. Participation à des hackathons et la conférence Symfony Live 2019.</p>
+      </div>
+    </div>
+    <div class="exp">
+      <div class="exp-logo">
+        <a href="#"><img src="img/hardis.png" alt="Logo d'Hardis Group"></a>
+      </div>
+      <div class="exp-info">
+        <h3>Développeur web PHP</h3>
+        <h4>Avril 2018 - Juillet 2018</h4>
+      </div>
+      <div class="exp-desc">
+        <p>Elaboration de tests unitaires et techniques. Participation à un projet web.</p>
+      </div>
+    </div>
   </div>
 
   <div class="rea" id="link3">
-    <h1>Réalisations</h1>
+    <h2>Réalisations</h2>
     <div class="gallery-wrap">
       <div class="item item-1"></div>
       <div class="item item-2"></div>
@@ -112,38 +165,29 @@
 </div>
 
 
-<!-- Footer -->
-<footer>
-  <div class="footer_title">
-    <h2>CONTACT</h2>
-  </div>
+<!-- FOOTER -->
+<footer class="footer-basic-centered">
+
+  <p class="footer-company-motto">Portfolio Bineta Diallo.</p>
+  <a href="CV_BinetaDIALLO.pdf" class="download">Télécharger mon CV</a>
   <div class="social-media">
     <i class="fab fa-facebook-f"></i>
     <i class="fab fa-linkedin-in"></i>
     <i class="fab fa-instagram"></i>
     <i class="fab fa-snapchat-ghost"></i>
   </div>
-  <div class="right-side"></div>
-  <div class="left-side">
-    <form>
-      <div>
-        <input class="text" placeholder="Nom" maxlength="100">
-      </div>
-      <div>
-        <input class="email" placeholder="Email" maxlength="250">
-      </div>
-      <div>
-        <textarea placeholder="Ecrivez votre message ici ..."></textarea>
-      </div>
-      <div>
-        <button>
-          <span>Envoyer</span>
-        </button>
-      </div>
-    </form>
-  </div>
-</footer>
+  <p class="footer-links">
+    <a href="#header">Accueil</a>
+    ·
+    <a href="#link1">Compétences</a>
+    ·
+    <a href="#link2">Expériences professionnelles</a>
+    ·
+    <a href="#link3">Réalisations</a>
+  </p>
 
+  <p class="footer-company-name">Bineta Diallo &copy; 2019</p>
+</footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
