Commit final final

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <div class="cont">
           <div class="skills skill_js">45%</div>
         </div>
+        <div><img src="img/git.png" alt="Image logo Git"></div>
         <div class="cont">
           <div class="skills git">68%</div>
         </div>
@@ -171,10 +172,10 @@
   <p class="footer-company-motto">Portfolio Bineta Diallo.</p>
   <a href="CV_BinetaDIALLO.pdf" class="download">Télécharger mon CV</a>
   <div class="social-media">
-    <i class="fab fa-facebook-f"></i>
-    <i class="fab fa-linkedin-in"></i>
-    <i class="fab fa-instagram"></i>
-    <i class="fab fa-snapchat-ghost"></i>
+    <i class="fab fa-facebook-f"><a href="https://www.facebook.com/"></a></i>
+    <i class="fab fa-linkedin-in"><a href="https://www.linkedin.com/feed/"></a></i>
+    <i class="fab fa-instagram"><a href="https://www.instagram.com/"></a></i>
+    <i class="fab fa-snapchat-ghost"><a href="#"></a></i>
   </div>
   <p class="footer-links">
     <a href="#header">Accueil</a>
