--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 <header id="header">
   <nav class="navbar" id="nav">
-    <a id="logo" class="navbar-brand" href=""><img src="img/logo2_ajust.png"></a>
+    <a id="logo" class="navbar-brand" href=""><img src="img/logo2_ajust.png" alt=""></a>
     <ul>
       <li><a href="#link1">Compétences</a></li>
       <li><a href="#link2">Expériences</a></li>
